--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=540c8377c739d4e9a68514f2a337a417
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/final_project?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
